<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/distance_direction_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/distance_direction_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="20dp"
            android:text="@string/distance_direction_latitude" />

        <TextView
            android:id="@+id/now_latitude"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/distance_direction_lat_number" />

        <TextView
            android:id="@+id/distance_direction_longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="20dp"
            android:text="@string/distance_direction_longitude" />

        <TextView
            android:id="@+id/now_longitude"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/distance_direction_long_number" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/distance_my_home_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/distance_my_home_latitude"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/distance_my_home_latitude" />

        <TextView
            android:id="@+id/home_latitude"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/distance_my_home_long_number" />

        <Button
            android:id="@+id/register_my_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/distance_register_my_home" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/distance_my_home_longitude"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="60dp"
            android:text="@string/distance_my_home_longitude" />

        <TextView
            android:id="@+id/home_longitude"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/distance_my_home_long_number" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance_to_my_home_title"/>

        <TextView
            android:id="@+id/num_distance_to_home"
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance_m"/>

    </LinearLayout>


    <TextView
        android:id="@+id/distance_conditions_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/distance_conditions_title" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/set_distance"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:minHeight="48dp"
            android:text="@string/distance_conditions_number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/distance_m" />

        <EditText
            android:id="@+id/assumed_distance"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:hint="@string/distance_conditions_number2"
            android:inputType="number"
            android:minHeight="48dp"
            android:autofillHints="" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/distance_m" />

        <Button
            android:id="@+id/distance_to_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/distance_btn_register" />

    </LinearLayout>


    <Button
        android:id="@+id/distance_btn_return"
        android:layout_width="288dp"
        android:layout_height="80dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="100dp"
        android:text="@string/distance_btn_return" />

</LinearLayout>